# fastapi-nextjs-starter

./: .env.example  .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  biome.json  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md  settings.json
.claude/commands/: add-feature.md  db-migrate.md  gen-client.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: user.py
backend/app/repositories/: user.py
backend/app/routers/: auth.py  health.py  users.py
backend/app/schemas/: user.py
backend/app/services/: user.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py  test_users.py
backend/tests/unit/: test_security.py
docs/decisions/: initial-tech-stack.md
frontend/: README.md  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts
