[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138",
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.18",
    "pydantic-settings>=2.14",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "mypy>=2.1",
    "sqlalchemy[mypy]>=2.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "ANN"]
ignore = []

[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["*/alembic/*"]
